[tool.poetry]
name = "potterdb"
version = "0.4.0"
description = ""
authors = ["tct123 <42028373+tct123@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/tct123/potterdb"
keywords = ["Wizarding World", "PotterDB", "Wizzard"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
